# mxindex

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/2026-02-24-153432-0000_create_servers/: up.sql
migrations/2026-02-25-000000-0000_add_indexes/: down.sql  up.sql
src/: app.rs  cache.rs  db.rs  federation_discovery.rs  http_client.rs  main.rs  metrics.rs  models.rs  rate_limit.rs  routes.rs  schema.rs  services.rs
