[package]
name = "mxindex"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = "0.16.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rocket_okapi = { version = "0.9", features = ["swagger"] }
schemars = { version = "0.8", features = ["chrono"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
thiserror = "2.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

governor = "0.6"
backoff = "0.4"
prometheus-client = "0.22"
futures = "0.3"

[dev-dependencies]
serde_json = "1.0"
mockall = "0.13"
httptest = "0.15"
